[fix]: remove obtain column distribution from database